Inline build template