@@ -3,16 +3,12 @@ package Buildship
 import jetbrains.buildServer.configs.kotlin.v2019_2.*
 import jetbrains.buildServer.configs.kotlin.v2019_2.Project
 import jetbrains.buildServer.configs.kotlin.v2019_2.buildSteps.gradle
-import jetbrains.buildServer.configs.kotlin.v2019_2.triggers.VcsTrigger
-import jetbrains.buildServer.configs.kotlin.v2019_2.triggers.finishBuildTrigger
-import jetbrains.buildServer.configs.kotlin.v2019_2.triggers.schedule
-import jetbrains.buildServer.configs.kotlin.v2019_2.triggers.vcs
+import jetbrains.buildServer.configs.kotlin.v2019_2.triggers.*
 
 object Project : Project({
     description = "Eclipse plugins for Gradle http://eclipse.org/buildship"
 
     vcsRoot(GitHubVcsRoot)
-
     template(EclipseBuildTemplate)
 
     params {
@@ -81,7 +77,7 @@ val releasePromotion = PromotionBuildType("release", tb4_4)
 class IndividualScenarioBuildType(type: String, os: String, eclipseVersion: String, javaVersion: String) : BuildType({
     createId("Individual", "${type}_Test_Coverage_${os}_Eclipse${eclipseVersion.replace(".", "_")}_Java${javaVersion}")
 
-    templates(EclipseBuildTemplate)
+    templates(IndividualScenarioTemplate)
 
     params {
         val sep = if (os == "Windows") "\\" else "/"
@@ -108,7 +104,7 @@ class IndividualScenarioBuildType(type: String, os: String, eclipseVersion: Stri
 class PromotionBuildType(typeName: String,  dependency: BuildType, trigger: String = "none") : BuildType({
     createId("Promotion", typeName.capitalize())
 
-    templates(EclipsePromotionTemplate)
+    templates(PromotionTemplate)
 
     params {
         when(typeName) {
@@ -255,6 +251,9 @@ object BuildshipExperimentalPipeline : Project({
 object BuildshipBuilds : Project({
     name = "Individual coverage scenarios"
     id("Buildship_individual_coverage_scenarios")
+
+    template(IndividualScenarioTemplate)
+
     // TODO both EclipseBuildTemplate and the other template should be here
     buildTypesWithOrder(individualBuildsForPhase1 + individualBuildsForPhase2 + individualBuildsForPhase3 + individualBuildsForPhase4)
 })
@@ -273,7 +272,7 @@ object BuildshipPromotions : Project({
     name = "Promotions"
     id("Buildship_promotions")
 
-    template(EclipsePromotionTemplate)
+    template(PromotionTemplate)
 
     buildTypesWithOrder(listOf(snapshotPromotion, milestonePromotion, releasePromotion))
 })
@@ -317,8 +316,8 @@ private enum class EclipseVersion(val codeName: String, val versionNumber: Strin
 }
 
 
-object EclipsePromotionTemplate : Template({
-    name = "Promotion Template new"
+object PromotionTemplate : Template({
+    name = "Promotion Build Template"
 
     artifactRules = "org.eclipse.buildship.site/build/repository/** => .teamcity/update-site"
 
@@ -342,5 +341,59 @@ object EclipsePromotionTemplate : Template({
 
     failureConditions {
         errorMessage = true
+    }
+})
+
+object IndividualScenarioTemplate : Template({
+    name = "Individual Scenario Build Template"
+
+    artifactRules = """
+        org.eclipse.buildship.site/build/repository/** => .teamcity/update-site
+        org.eclipse.buildship.core.test/build/eclipseTest/workspace/.metadata/.log => .teamcity/test/org.eclipse.buildship.core.test
+        org.eclipse.buildship.ui.test/build/eclipseTest/workspace/.metadata/.log => .teamcity/test/org.eclipse.buildship.ui.test
+    """.trimIndent()
+
+    params {
+        param("eclipse.release.type", "snapshot")
+        param("build.invoker", "ci")
+        param("eclipse.test.java.home", "%env.JAVA_HOME%")
+        param("gradle.tasks", "clean build")
+        param("env.JAVA_HOME", "%linux.java7.oracle.64bit%")
+        param("eclipsetest.mirrors", "jcenter:https://dev12.gradle.org/artifactory/jcenter")
+        param("enable.oomph.plugin", "true")
+    }
+
+    vcs {
+        root(GitHubVcsRoot)
+
+        checkoutMode = CheckoutMode.ON_AGENT
+    }
+
+    triggers {
+        retryBuild {
+            delaySeconds = 0
+            attempts = 2
+        }
+    }
+
+    steps {
+        gradle {
+            name = "RUNNER_21"
+            id = "RUNNER_21"
+            tasks = "%gradle.tasks%"
+            buildFile = ""
+            gradleParams = "-Peclipse.version=%eclipse.version% -Pcompiler.location='%compiler.location%' -Pbuild.invoker=%build.invoker% -Prelease.type=%eclipse.release.type% -Peclipse.test.java.home='%eclipse.test.java.home%' --info --stacktrace -Declipse.p2.mirror=false -Dscan -Pmirrors=%eclipsetest.mirrors% -Penable.oomph.plugin=%enable.oomph.plugin% \"-Dgradle.cache.remote.url=%gradle.cache.remote.url%\" \"-Dgradle.cache.remote.username=%gradle.cache.remote.username%\" \"-Dgradle.cache.remote.password=%gradle.cache.remote.password%\""
+            jvmArgs = "-XX:MaxPermSize=256m"
+            param("org.jfrog.artifactory.selectedDeployableServer.defaultModuleVersionConfiguration", "GLOBAL")
+        }
+    }
+
+    addCredentialsLeakFailureCondition()
+
+    cleanup {
+        all(days = 5)
+        history(days = 5)
+        artifacts(days = 5)
+        preventDependencyCleanup = false
     }
 })
